Preliminary Videos and Renderer 4 cleanup

--- a/Renderer 4.0.ipynb
+++ b/Renderer 4.0.ipynb
@@ -2,23 +2,74 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from PIL import Image\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from PIL import Image\n",
+    "import numpy as np\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class camera:\n",
+    "    \"\"\" An class that contains all the data for a camera \"\"\"\n",
+    "    def __init__(self, horizontal_fov: int, vertical_fov: int, resolution: tuple, location: tuple, direction: tuple, view_distance: tuple):\n",
+    "        self.horizontal_fov = horizontal_fov\n",
+    "        self.vertical_fov = vertical_fov\n",
+    "        self.resolution = resolution\n",
+    "        self.location = location\n",
+    "        self.direction = direction\n",
+    "        self.view_distance = view_distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class mesh3D:\n",
+    "    \"\"\" An class that contains all the data for a mesh \"\"\"\n",
+    "    def __init__(self, verticies: list, faces: list, center: tuple):\n",
+    "        self.verticies = verticies\n",
+    "        self.faces = faces\n",
+    "        self.center = center"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_image(pixels: list, image_name: str):\n",
+    "    \"\"\"takes in a numpy array of tuples of rgb values and converts it into a image then it saves the image as a file and displays the image\"\"\"\n",
+    "    pixels = list(zip(*pixels))[::-1]\n",
+    "    array = np.array(pixels, dtype=np.uint8)\n",
+    "    new_image = Image.fromarray(array)\n",
+    "    display(new_image)\n",
+    "    new_image.save(image_name + '.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def initialize_2dimage(dimensions: tuple, background_color: tuple) -> list:\n",
-    "    ''' Creates a two dimensional numpy array of a certain size that is populated with tuples of the rgb values of the background_color inputted '''\n",
-    "    return [[background_color for _ in range(dimensions[1])] for _ in range(dimensions[0])]"
+    "    ''' Creates a three dimensional numpy array of a certain size that dimension1 x dimension2 x 3 to represent the RGB value at each point'''\n",
+    "    image = np.zeros((1000, 1000, 3), dtype=np.uint8)\n",
+    "    image[:, :, 0] = background_color[0] \n",
+    "    image[:, :, 1] = background_color[1] \n",
+    "    image[:, :, 2] = background_color[2] \n",
+    "    return image"
    ]
   },
   {
@@ -77,48 +128,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_image(pixels: list, image_name: str):\n",
-    "    \"\"\"takes in a numpy array of tuples of rgb values and converts it into a image then it saves the image as a file and displays the image\"\"\"\n",
-    "    pixels = list(zip(*pixels))[::-1]\n",
-    "    array = np.array(pixels, dtype=np.uint8)\n",
-    "    new_image = Image.fromarray(array)\n",
-    "    display(new_image)\n",
-    "    new_image.save(image_name + '.png')"
+    "def global_cords(center: np.ndarray, model_verticies: np.ndarray):\n",
+    "    \"\"\"Will return location of a meshes verticies in global space from inputtings its center location and mesh information\"\"\"\n",
+    "    transformation_matrix = np.array([[1,0,0,center[0]],\n",
+    "                                      [0,1,0,center[1]],\n",
+    "                                      [0,0,1,center[2]],\n",
+    "                                      [0,0,0,1]])\n",
+    "    return [np.dot(transformation_matrix,vertex) for vertex in model_verticies]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class camera:\n",
-    "    \"\"\" An class that contains all the data for a camera \"\"\"\n",
-    "    def __init__(self, fov: int, vertical_fov: int, resolution: tuple, location: tuple, direction: tuple, view_distance: tuple):\n",
-    "        self.fov = fov\n",
-    "        self.vertical_fov = vertical_fov\n",
-    "        self.resolution = resolution\n",
-    "        self.location = location\n",
-    "        self.direction = direction\n",
-    "        self.view_distance = view_distance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class mesh3D:\n",
-    "    \"\"\" An class that contains all the data for a mesh \"\"\"\n",
-    "    def __init__(self, verticies: list, faces: list, center: tuple):\n",
-    "        self.verticies = verticies\n",
-    "        self.faces = faces\n",
-    "        self.center = center"
+    "def reorient_to_camera(self, cam: camera, global_verticies: np.ndarray):\n",
+    "    \"\"\"reorients and rotates verticies to be aligned with the camera at (0,0) with the positive direction where the camera is looking\"\"\"\n",
+    "    translation_matrix = np.array([[1,0,0,-cam.location[0]],\n",
+    "                                    [0,1,0,-cam.location[1]],\n",
+    "                                    [0,0,1,-cam.location[2]],\n",
+    "                                    [0,0,0,1]])\n",
+    "    x_rotation_matrix = np.array([[1,0,0,0],\n",
+    "                                  [0,math.cos(math.radians(-cam.direction[0])),-math.sin(math.radians(-cam.direction[0])),0],\n",
+    "                                  [0,math.sin(math.radians(-cam.direction[0])),math.cos(math.radians(-cam.direction[0])),0],\n",
+    "                                  [0,0,0,1]])\n",
+    "    y_rotation_matrix = np.array([[math.cos(math.radians(-cam.direction[1])),0,math.sin(math.radians(-cam.direction[1])),0],\n",
+    "                                  [0,1,0,0],\n",
+    "                                  [-math.sin(math.radians(-cam.direction[1])),0,math.cos(math.radians(-cam.direction[1])),0],\n",
+    "                                  [0,0,0,1]])\n",
+    "    z_rotation_matrix = np.array([[math.cos(math.radians(-cam.direction[2])),-math.sin(math.radians(-cam.direction[2])),0,0],\n",
+    "                                  [math.sin(math.radians(-cam.direction[2])),math.cos(math.radians(-cam.direction[2])),0,0],\n",
+    "                                  [0,0,1,0],\n",
+    "                                  [0,0,0,1]])\n",
+    "    return [np.dot(np.dot(np.dot(np.dot(point,translation_matrix),x_rotation_matrix),y_rotation_matrix),z_rotation_matrix) for point in global_verticies] "
    ]
   },
   {
@@ -126,7 +173,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "def clipping(cam: camera, oriented_to_camera_verticies: list, faces: list):\n",
+    "    ''' takes in verticies location in respect to the camera and runs through each face to determine if it is in the fov of the camera. If none of the face is in the camera it will get deleted'''\n",
+    "    remaining_faces = []\n",
+    "    for face in faces:\n",
+    "        for point_idx in face:\n",
+    "            point = oriented_to_camera_verticies[point_idx]\n",
+    "            if cam.horizontal_fov >= abs(math.degrees(math.tan(point[0]/point[2]))) and cam.vertical_fov >= abs(math.degrees(math.tan(point[1]/point[2]))) and cam.view_distance[1] >= point[2] >= cam.view_distance[0]:\n",
+    "                remaining_faces.append(face)\n",
+    "                break\n",
+    "    return remaining_faces"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note to self use Cython to make the program run faster when I am done"
+   ]
   }
  ],
  "metadata": {
