Screen space and projection transformations

--- a/Renderer 4.0.ipynb
+++ b/Renderer 4.0.ipynb
@@ -78,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def line_2d(point_1: tuple, point_2: tuple):\n",
+    "def line_2d(point_1: np.ndarray, point_2: np.ndarray):\n",
     "    \"\"\" \n",
     "    Acts as a generator which yields the the cordinates of subsequent points on a line formed between two inputed points as tuples\n",
     "\n",
@@ -174,8 +174,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "def clipping(cam: camera, oriented_to_camera_verticies: list, faces: list):\n",
+    "############ POTENTIALLY REMOVE THIS IF CLIPPING IN THE RASTERIZATION FUNCTION WORKS WELL ENOUGH############\n",
+    "def clipping(cam: camera, oriented_to_camera_verticies: np.ndarray, faces: np.ndarray):\n",
     "    ''' takes in verticies location in respect to the camera and runs through each face to determine if it is in the fov of the camera. If none of the face is in the camera it will get deleted'''\n",
     "    remaining_faces = []\n",
     "    for face in faces:\n",
@@ -186,6 +186,80 @@
     "                break\n",
     "    return remaining_faces"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def perspective_projection(cam: camera, oriented_to_camera_vertices: np.ndarray):\n",
+    "\n",
+    "    projection_matrix = np.array([\n",
+    "        [cam.view_distance[0] / math.tan(math.radians(cam.horizontal_fov / 2)), 0, 0, 0],\n",
+    "        [0, cam.view_distance[0] / math.tan(math.radians(cam.vertical_fov / 2)), 0, 0],\n",
+    "        [0, 0, cam.view_distance[1] - cam.view_distance[0], -cam.view_distance[0] * cam.view_distance[0]],\n",
+    "        [0, 0, 1, 0]])\n",
+    "\n",
+    "    points_in_2d = []\n",
+    "    for vertex in oriented_to_camera_vertices:\n",
+    "        homogeneous_point = np.dot(vertex, projection_matrix)\n",
+    "        w_reciprocal = 1.0 / homogeneous_point[3]\n",
+    "\n",
+    "        # Avoid creating unnecessary NumPy array, use a temporary variable instead\n",
+    "        projected_point = [homogeneous_point[0] * w_reciprocal, homogeneous_point[1] * w_reciprocal, homogeneous_point[3], 1]\n",
+    "        points_in_2d.append(projected_point)\n",
+    "\n",
+    "    return points_in_2d\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def back_culling(oriented_to_camera_verticies: np.ndarray, faces: np.ndarray):\n",
+    "    ''' takes in faces and verticies and returns a list of faces excluding any faces that would be looking away from the camera and occluded by other faces in front of it'''\n",
+    "    culled_faces = []\n",
+    "    for face in faces:\n",
+    "        ax, ay, az, _ = oriented_to_camera_verticies[face[0]]\n",
+    "        bx, by, bz, _  = oriented_to_camera_verticies[face[1]]\n",
+    "        cx, cy, cz, _  = oriented_to_camera_verticies[face[2]]\n",
+    "        #relies on any mesh textextures to have their faces to have vectors cross product face out of the mesh\n",
+    "        vector1 = np.array([bx-ax, by-ay, bz-az]) \n",
+    "        vector2 = np.array([bx-cx, by-cy, bz-cz])\n",
+    "        angle = np.cross(vector1, vector2)\n",
+    "        if np.dot(angle, oriented_to_camera_verticies[face[1]][:2]) < 0:\n",
+    "            culled_faces.append(face)\n",
+    "    return culled_faces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def screen_space(cam: camera, verticies: np.ndarray):\n",
+    "    ''' Takes in verticies after the perspective projection and adjusts them to the resolution of the screen '''\n",
+    "    return np.array([[round((vertex[0]+1)*cam.resolution[0]/2),round((vertex[1]+1)*cam.resolution[1]/2),vertex[2],1] for vertex in verticies])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
