--- a/Render extra code.ipynb
+++ b/Render extra code.ipynb
@@ -106,8 +106,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "general",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.1"
   },
   "orig_nbformat": 4
  },
