--- a/Render extra code.ipynb
+++ b/Render extra code.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'camera' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mrasterization\u001b[39m(cam: \u001b[43mcamera\u001b[49m, canvas: \u001b[38;5;28mlist\u001b[39m, height_map: \u001b[38;5;28mlist\u001b[39m, verticies: \u001b[38;5;28mlist\u001b[39m, faces: \u001b[38;5;28mlist\u001b[39m, border_color: \u001b[38;5;28mtuple\u001b[39m, fill_color: \u001b[38;5;28mtuple\u001b[39m):\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m face \u001b[38;5;129;01min\u001b[39;00m faces:\n\u001b[0;32m      3\u001b[0m         ax, ay, az, _ \u001b[38;5;241m=\u001b[39m verticies[face[\u001b[38;5;241m0\u001b[39m]]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'camera' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def rasterization(cam: camera, canvas: list, height_map: list, verticies: list, faces: list, border_color: tuple, fill_color: tuple):\n",
     "    for face in faces:\n",
@@ -112,7 +124,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.1"
   },
   "orig_nbformat": 4
